--- a/content/2019-01-04-前言撤回し、日本株を買う.md
+++ b/content/2019-01-04-前言撤回し、日本株を買う.md
@@ -24,8 +24,8 @@ categories:
 
 ## バンダイナムコホールディングス（コード:7832）
 - スマホのランキング上位にアプリが大量に入っており利益を稼いでいる（年末にお得な課金要素を入れていたのが大きいと思うが）
-- 株が大幅に下る中、12月28日に年初来高値を達成している。
-- VRエンターテインメント施設「VR ZONE」など、VR（仮想現実）、AR（拡張現実）、MR（複合現実）で事業を行っているのも好感触
+- 日経平均が大幅に下る中、12月28日に年初来高値を達成している。
+- VRエンターテインメント施設「VR ZONE」など、VR（仮想現実）、AR（拡張現実）、MR（複合現実）で事業を行っているのも個人的に好感触
 
 ## リネットジャパングループ（コード:3556）
 - 個人的にネットオフを使っており、宅配買取に伸びる要素を感じる。
