--- a/content/2019-01-14-1:14のポートフォリオ.md
+++ b/content/2019-01-14-1:14のポートフォリオ.md
@@ -20,25 +20,19 @@ categories:
 1. ＧＭＯフィナンシャルホールディングス（コード:7177） 606円 100株
 1. 他日本円
 
+持っていた株は一旦売った。リネットジャパングループは買い直した。
+今年の実現損益+263,610円
 
 株の時価総額　6,471,700円
 評価損益合計　+192,600円
 
-
 アメリカが利上げ停止して、日本が何もしないから、円高方向か。
 何も起こらなければ3月ぐらいまで変わらないかな。
 
-あとは消費税がどうなるか。
-
-
 Facebookが安くなっているので買いたいところだけど
-世界経済が不安定なので、これ以上リスク取りたくないので考え中
+世界経済が不安定なので、これ以上リスク取りたくないし、
+円高方向なので買いたくない。
 
 Facebookが安くなっているのは、稼げなくなっているからだが、
 Deep Learning用のフレームワークPyTorchも抑えているし
-何らかのきっかけで再度稼げる様になる可能性がある。
-
-買うのであれば、稼げなくなって安くなったときに買うのはありだが、
-日本株を結構買っている。
-今年は政治イベントが多くこれ以上ポジションを増やしたくないので考え中
-
+何らかのきっかけで再度稼げる様になる可能性があるので注視している。
