--- a/content/2019-01-14-1:14のポートフォリオ.md
+++ b/content/2019-01-14-1:14のポートフォリオ.md
@@ -31,7 +31,7 @@ categories:
 
 Facebookが安くなっているので買いたいところだけど
 世界経済が不安定なので、これ以上リスク取りたくないし、
-円高方向なので買いたくない。
+円高方向なのでもう少し待ち
 
 Facebookが安くなっているのは、稼げなくなっているからだが、
 Deep Learning用のフレームワークPyTorchも抑えているし
