[fix]変更後の現金比率の明確化

--- a/content/2019-12-31-2019年末時点のポートフォリオ .md
+++ b/content/2019-12-31-2019年末時点のポートフォリオ .md
@@ -16,11 +16,11 @@ categories:
 しかし株は大幅に上がった。  
 2020年を見たときに、株・REITが既に割高になっているように見える。  
 しかし2020年は持つのではと考え直した。  
-そのため、現金比率が85%だったので、これを少し下げることにした。
+そのため、現金比率が85%だったので、これを50％まで下げることにした。
 
 【変更点】  
 GOOGLとPGNYを購入  
-確定拠出年金も現金からMSCI-KOKUSAIのインデックスファンドに変更
+確定拠出年金も現金からMSCI-KOKUSAIのインデックスファンドに変更（年明けに購入）
 
 
 
